<resources>
    <string name="app_name">GitHub User App</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="user_avatar">User Avatar</string>
    <string name="app_logo">App Logo</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title_activity_favorite_user">FavoriteUserActivity</string>
    <string name="favorite_null">Tidak ada user favorite</string>
    <string name="favorite_button">favorite button</string>

</resources>